fixed sidebar on small screens, created profile comments page, changed logout button color

--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -6,9 +6,6 @@
     width: 220px;
 
     z-index: 10;
-
-    overflow-x: hidden;
-    overflow-y: auto;
 }
 
 html[dir="rtl"] .sidebar {
